# uAMP

./: .gitignore  AppSettings.qml  AuthorizationPage.qml  CMakeLists.txt  CMakeLists.txt.user.7773ee6  CustomButton.qml  CustomGradient.qml  CustomSlider.qml  CustomText.qml  CustomTextField.qml  CustomToolBar.qml  Database.db  FileDialogFiles.qml  FindToolBtn.qml  MusicController.qml  MusicControllerButton.qml  MusicControllerButtonCheck.qml  MusicDelegate.qml  MusicDelegatePlaylist.qml  MusicDelegateRadio.qml  MusicEqualizer.qml  MusicLibraryPage.qml  MusicList.qml  MusicPlaylistEdit.qml  MusicPlaylists.qml  MusicQueue.qml  MusicRadio.qml  Name.db  Properties.qml  PropertiesColoredBGButton.qml  PropertiesColoredThemeButton.qml  README.md  Settings.qml  SignInPage.qml  StarsWrapper.qml  ToolBarButtonMain.qml  ToolBtn.qml  UserPage.qml  UserPageAllMusics.qml  UserPageFavourite.qml  (+21 more)
